--- a/package.json
+++ b/package.json
@@ -12,16 +12,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-
-    "react-router-dom": "^6.23.1",
-
-
     "react-router-dom": "^6.24.0",
-
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
