--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@material-ui/pickers": "^3.3.11",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@mui/x-date-pickers": "^7.7.1",
@@ -16,14 +17,11 @@
     "react-datepicker": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-
-    "react-router-dom": "^6.23.1",
-
-
     "react-router-dom": "^6.24.0",
-
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "stylis": "^4.3.2",
+    "stylis-plugin-rtl": "^2.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
