--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://diversi-tech.github.io/foirstein-1-front0/",
   "name": "userloginfronted",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +9,7 @@
     "@material-ui/pickers": "^3.3.11",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@mui/styles": "^5.16.0",
     "@mui/x-date-pickers": "^7.7.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,12 +17,15 @@
     "axios": "^1.7.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.7",
     "redux": "^5.0.1",
     "stylis": "^4.3.2",
     "stylis-plugin-rtl": "^2.1.1",
