--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.15.20",
-    "@mui/material": "^5.15.20",
+    "@mui/material": "^5.16.0",
+    "@mui/styles": "^5.16.0",
     "@mui/x-date-pickers": "^7.7.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -14,12 +16,16 @@
     "axios": "^1.7.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-cookie": "^7.1.4",
     "react-datepicker": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.7",
     "redux": "^5.0.1",
     "stylis": "^4.3.2",
     "stylis-plugin-rtl": "^2.1.1",
