--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux": "^5.0.1",
     "stylis": "^4.3.2",
     "stylis-plugin-rtl": "^2.1.1",
+    "sweetalert2": "^11.12.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
