--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.15.20",
     "@mui/styles": "^5.16.0",
-    "@mui/x-date-pickers": "^7.7.1",
+    "@mui/x-date-pickers": "^7.11.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
+    "date-fns": "^3.6.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
